data/derived/comb/progs/unify/prog8974.ml.out
Characters 125-136:
  then (1,a2 @ a1+x1+x2-10) 
               ^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
